--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body>
     <%= render 'shared/header' %>
-    <%= yield %>
+    <div class="ui container">
+      <%= yield %>
+    </div>
   </body>
 </html>
