--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,7 @@
-<div class="ui fixed menu navbar">
-  <div class="item">
-    Odin social
-  </div>
-<% if signed_in? %>
-  <%= render 'header/user_menu' %>
-<% else %>
-  <%= render 'header/sign_in_form' %>
-<% end %>
+<div class="ui inverted blue fixed menu navbar">
+  <% if signed_in? %>
+    <%= render 'header/user_menu' %>
+  <% else %>
+    <%= render 'header/sign_in_header' %>
+  <% end %>
 </div>
