Basic header for guest done

--- a/app/views/header/_user_menu.html.erb
+++ b/app/views/header/_user_menu.html.erb
@@ -1,1 +1,4 @@
+<%= link_to destroy_user_session_path, method: :delete do %>
+  <button class="ui mini button">Sign out</button>
+<% end %>
 user menu
