--- a/app/views/header/_sign_in_form.html.erb
+++ b/app/views/header/_sign_in_form.html.erb
@@ -1,1 +1,19 @@
-sign in form
+<%= form_for :user, url: new_user_session_path, html: {class: 'ui form'} do |f|%>
+  <div class="inline fields">
+    <div class="field">
+      <div class="ui mini left icon input">
+        <%= f.text_field :email %>
+        <i class="mail icon"></i>
+      </div>
+    </div>
+    <div class="field">
+      <div class="ui mini left icon input">
+        <%= f.password_field :password %>
+        <i class="lock icon"></i>
+      </div>
+    </div>
+    <button class="ui mini submit button" type="submit">
+      Sign in
+    </button>
+  </div>
+<% end %>
