--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="ui inverted blue menu navbar">
+<div class="ui inverted blue borderless menu navbar">
   <% if signed_in? %>
     <%= render 'header/user_menu' %>
   <% else %>
