--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,12 @@
+<style>
+  body {
+    background-color: #DADADA;
+  }
+</style>
+
 <div class="row">
-  home page
+  <h3>Sign up</h3>
+  <div class="ui form">
+    <%= render 'shared/user_sign_up_form' %>
+  </div>
 </div>
