--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <%= render 'shared/header' %>
 
-    <div class="ui container">
+    <div class="ui main container">
       <%= semantic_flash %>
       <div class="ui page grid main">
         <div class="row">
