--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,29 @@
-<p>
-  show.html.erb
-</p>
-
-<p>
-  <%= @user.profile.first_name %>
-  <%= @user.profile.last_name %>
-</p>
+<div class="ui grid">
+  <div class="row">
+    <h2 class="ui header">
+      <%= @user.profile.first_name %>
+      <%= @user.profile.last_name %>
+    </h2>
+  </div>
+  
+  <div class="row">
+    <h3 class="ui header">
+      Friends
+    </h3>
+  </div>
+  
+  <div class="row">
+    <div class="ui middle aligned list">
+      <% @user.friends.each do |friend| %>
+        <div class="item">
+          <img class="ui avatar image" src="<%= friend.profile.avatar_url %>" alt="">
+          <div class="content">
+            <div class="header">
+              <%= link_to "#{friend.profile.first_name} #{friend.profile.last_name}", friend %>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
